<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="horizontal">
    <!--首页-->
    <LinearLayout
        android:id="@+id/home_page_layout"
        style="@style/main_tab_layout_bottom"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tab_menu_homepage"
                style="@style/tab_menu_text"
                android:drawableTop="@drawable/tab_icon_homepage"
                android:text="@string/homepage"/>
            <TextView
                android:id="@+id/tab_menu_homepage_num"
                style="@style/tab_menu_bgnum"
                android:layout_toRightOf="@+id/tab_menu_homepage"
                android:text="99+"
                android:visibility="gone"/>
        </RelativeLayout>

    </LinearLayout>
    <!--购衣助手-->
    <LinearLayout
        android:id="@+id/assistant_layout"
        style="@style/main_tab_layout_bottom"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tab_menu_assistant_num"
                style="@style/tab_menu_bgnum"
                android:layout_toRightOf="@+id/tab_menu_assistant"
                android:text="99+"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tab_menu_assistant"
                style="@style/tab_menu_text"
                android:drawableTop="@drawable/tab_icon_assistant"
                android:text="@string/shopping"/>
        </RelativeLayout>

    </LinearLayout>
    <!--在线创作-->
    <LinearLayout
        android:id="@+id/create_on_line_layout"
        style="@style/main_tab_layout_bottom"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/icon_add"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="#00000000"
                android:clickable="false" android:src="@mipmap/home_add"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

    </LinearLayout>
    <!--分类-->
    <LinearLayout
        android:id="@+id/classify_layout"
        style="@style/main_tab_layout_bottom"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tab_menu_classify_num"
                style="@style/tab_menu_bgnum"
                android:layout_toRightOf="@+id/tab_menu_classify"
                android:text="99+"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tab_menu_classify"
                style="@style/tab_menu_text"
                android:drawableTop="@drawable/tab_icon_classify"
                android:text="@string/assistant_match"/>
        </RelativeLayout>

    </LinearLayout>
    <!--我的日记-->
    <LinearLayout
        android:id="@+id/my_diary_layout"
        style="@style/main_tab_layout_bottom"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tab_menu_my_diary_num"
                style="@style/tab_menu_bgnum"
                android:layout_toRightOf="@+id/tab_menu_my_diary"
                android:text="99+"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tab_menu_my_diary"
                style="@style/tab_menu_text"
                android:drawableTop="@drawable/tab_icon_mydiary"
                android:text="@string/my_diary"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
