<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.jackson.ssrjmvp.view.activity.LoginActivity">

    <include layout="@layout/head_layout"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <!--邮箱、密码布局-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginTop="90dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:digits="0123456789"
                            android:hint="@string/phone_number"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="19"
                            android:singleLine="true"
                            android:textSize="15sp"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/light_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/please_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textSize="15sp"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>
            <!--登录按键-->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="登录"
                android:textColor="@color/white"
                android:textSize="13sp"/>
            <!--忘记密码，手机号快捷登录-->
            <LinearLayout
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forget_password"
                    android:textColor="@color/text_black_color"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/quickly_login"
                    android:textColor="@color/text_black_color"
                    android:textSize="13sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="74dp"
                android:gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.7dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    android:background="#dad1ce"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/use_third_party_account_login"
                    android:textColor="@color/text_black_color"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.7dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    android:background="#dad1ce"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/third_background"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="6dp"
                        android:background="@drawable/weichat_login"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="26dp"
                    android:background="@drawable/third_background"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="6dp"
                        android:background="@drawable/qq_login"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_centerInParent="true"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/progress_circle_shape"/>
    </RelativeLayout>





</LinearLayout>
